--- a/config/samples/metal_v1alpha1_biossettings.yaml
+++ b/config/samples/metal_v1alpha1_biossettings.yaml
@@ -1,5 +1,5 @@
 apiVersion: metal.ironcore.dev/v1alpha1
-kind: biossettings
+kind: BIOSSettings
 metadata:
   labels:
     app.kubernetes.io/name: metal-operator
@@ -8,8 +8,7 @@ metadata:
 spec:
   serverRef:
     name: endpoint-sample-system-0
-  biosSettings:
-    version: 2.10.3
-    settings:
-      PxeDev1EnDis: Disable
-  ServerMaintenancePolicyTemplate: OwnerApproval
+  version: 2.10.2
+  settings:
+    PxeDev1EnDis: Enabled
+  serverMaintenancePolicy: OwnerApproval
