--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -21,6 +21,7 @@ webhooks:
     operations:
     - CREATE
     - UPDATE
+    - DELETE
     resources:
     - biossettings
   sideEffects: None
@@ -62,6 +63,7 @@ webhooks:
     operations:
     - CREATE
     - UPDATE
+    - DELETE
     resources:
     - bmcsettings
   sideEffects: None
