--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -36,6 +36,7 @@ rules:
   - bmcs
   - bmcsecrets
   - bmcsettings
+  - bmcversions
   - endpoints
   - serverbootconfigurations
   - serverclaims
@@ -58,6 +59,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
+  - bmcversions/finalizers
   - endpoints/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
@@ -73,6 +75,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - bmcsettings/status
+  - bmcversions/status
   - endpoints/status
   - serverbootconfigurations/status
   - serverclaims/status
