Review comments change to follow naming conventions

--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -18,15 +18,18 @@ spec:
     - jsonPath: .spec.biosSettings.version
       name: BIOSVersion
       type: string
-    - jsonPath: .status.state
-      name: State
-      type: string
     - jsonPath: .spec.serverRef.name
       name: ServerRef
       type: string
     - jsonPath: .spec.serverMaintenanceRef.name
       name: ServerMaintenanceRef
       type: string
+    - jsonPath: .status.state
+      name: State
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
     name: v1alpha1
     schema:
       openAPIV3Schema:
