--- a/config/samples/metal_v1alpha1_biosversion.yaml
+++ b/config/samples/metal_v1alpha1_biosversion.yaml
@@ -10,7 +10,7 @@ spec:
   image:
     URI: "https://foo-2.34_10_04_2024.signed.flash"
     transferProtocol: "HTTPS"
-  forceUpdate: false
+  updatePolicy: Normal
   serverRef:
     name: endpoint-sample-hpe-system-0
   serverMaintenancePolicy: OwnerApproval
