--- a/config/crd/bases/metal.ironcore.dev_biosversions.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biosversions.yaml
@@ -21,8 +21,11 @@ spec:
     - jsonPath: .spec.updateType
       name: ForceUpdate
       type: string
-    - jsonPath: .status.state
-      name: State
+    - jsonPath: .spec.serverRef.name
+      name: ServerRef
+      type: string
+    - jsonPath: .spec.serverMaintenanceRef.name
+      name: ServerMaintenanceRef
       type: string
     - jsonPath: .status.upgradeTask.taskState
       name: TaskState
@@ -33,12 +36,12 @@ spec:
     - jsonPath: .status.upgradeTask.percentageComplete
       name: TaskProgress
       type: integer
-    - jsonPath: .spec.serverRef.name
-      name: ServerRef
+    - jsonPath: .status.state
+      name: State
       type: string
-    - jsonPath: .spec.serverMaintenanceRef.name
-      name: ServerMaintenanceRef
-      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
     name: v1alpha1
     schema:
       openAPIV3Schema:
@@ -160,7 +163,7 @@ spec:
                 x-kubernetes-validations:
                 - message: serverRef is immutable
                   rule: self == oldSelf
-              updateType:
+              updatePolicy:
                 description: An indication of whether the server's upgrade service
                   should bypass vendor update policies
                 type: string
