Use Pointer and mark required fields

--- a/config/crd/bases/metal.ironcore.dev_biosversions.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biosversions.yaml
@@ -171,6 +171,7 @@ spec:
                 description: Version contains BIOS version to upgrade to
                 type: string
             required:
+            - image
             - version
             type: object
           status:
