--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -32,6 +32,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings
+  - biossettingsflows
   - biosversions
   - bmcs
   - bmcsecrets
@@ -53,6 +54,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/finalizers
+  - biossettingsflows/finalizers
   - biosversions/finalizers
   - bmcs/finalizers
   - bmcsecrets/finalizers
@@ -67,6 +69,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/status
+  - biossettingsflows/status
   - biosversions/status
   - bmcs/status
   - bmcsecrets/status
