--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -9,4 +9,5 @@ resources:
 - metal_v1alpha1_servermaintenance.yaml
 - metal_v1alpha1_biossettings.yaml
 - metal_v1alpha1_biosversion.yaml
+- metal_v1alpha1_biossettingsflow.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
