Switch docs to vitepress
Use vitepress to generate and publish our project documentation. The
github action has been changed to also use vitepress to publish the
documentation content as GH pages.

The current dev setup has been kept in takt by running `make startdocs`
locally.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,3 +24,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/docs"
+    schedule:
+      interval: "weekly"
