--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,6 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "npm"
-    directory: "/docs"
+    directory: "/"
     schedule:
       interval: "weekly"
