--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -5,7 +5,8 @@ on:
   # using the `master` branch as the default branch.
   push:
     branches: [main]
-
+  pull_request:
+    types: [ assigned, opened, synchronize, reopened ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -39,22 +40,21 @@ jobs:
         with:
           node-version: 24
           cache: npm # or pnpm / yarn
-          cache-dependency-path: docs/package-lock.json
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
         run: npm ci # or pnpm install / yarn install / bun install
-        working-directory: ./docs
       - name: Build with VitePress
         run: npm run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
-        working-directory: ./docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/.vitepress/dist
+        if: github.event_name != 'pull_request' # Skip upload on PRs
 
   # Deployment job
   deploy:
+    if: github.event_name != 'pull_request' # Skip deployment on PRs
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
