Fix local docs setup

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -6,12 +6,8 @@ RUN apk add --no-cache bash
 # Set working directory
 WORKDIR /app
 
-# Install vitepress globally (optional, npx will work too)
-RUN npm install -g vitepress
-RUN npm install -g vitepress-plugin-mermaid
-
 # Expose dev port
 EXPOSE 5173
 
 # Default command to start VitePress dev
-CMD ["npx", "vitepress", "dev", "docs", "--host", "0.0.0.0"]
+ENTRYPOINT ["./hack/start-docs.sh"]
