--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -21,6 +21,7 @@ webhooks:
     operations:
     - CREATE
     - UPDATE
+    - DELETE
     resources:
     - biossettings
   sideEffects: None
@@ -44,6 +45,27 @@ webhooks:
     - DELETE
     resources:
     - biosversions
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-metal-ironcore-dev-v1alpha1-bmcsettings
+  failurePolicy: Fail
+  name: vbmcsettings-v1alpha1.kb.io
+  rules:
+  - apiGroups:
+    - metal.ironcore.dev
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    - DELETE
+    resources:
+    - bmcsettings
   sideEffects: None
 - admissionReviewVersions:
   - v1
