--- a/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
@@ -77,8 +77,8 @@ spec:
                   approval is only enforced for server's which are reserved state\nServerMaintenancePolicyEnforced
                   will will bypass user approval and apply setting directly"
                 type: string
-              serverMaintenanceRefList:
-                description: ServerMaintenanceRefList are references to a ServerMaintenance
+              serverMaintenanceRefs:
+                description: ServerMaintenanceRefs are references to a ServerMaintenance
                   objects that Controller has requested for the each of the related
                   server.
                 items:
@@ -127,8 +127,6 @@ spec:
                           type: string
                       type: object
                       x-kubernetes-map-type: atomic
-                    serverName:
-                      type: string
                   type: object
                 type: array
               settings:
