Add `BMCSettings` type and controller implementation (#303)
* Add crd and controller for BMCSettings

* change name to bmcSettings

* Add reset bmc, improve controller logic

* skip some lint check temporarily

* Improve documentation for bmcSettings

* Update design to accomodate difference vedor variations

* merge conflict after rebase

* request for maintenance all the time

* Merge with latest Unit test helpers

* expected merge changes with BIOSVersion CRD PR

* Fix naming convenctions, factor out code  and fix comments

* Use requeAfter instead of reconcile error

* Resolve merge conflicts with main

* Change naming to ServerMaintenanceRefItem

* resolve merge conflict with merge

* regenerate genereted files

* some code improvements

* remove unwanted comments and newlines

* Add webhook for `BMCSettings` resources (#322)

* Add webhook for BMCSettings resources

* remove serverRefList

* Add delete logic in the webbhoob

* fix some housekeeping stuff

* Update the serverMaintenanceRef API field

--- a/config/crd/bases/metal.ironcore.dev_bmcs.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcs.yaml
@@ -103,6 +103,27 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              bmcSettingsRef:
+                description: |-
+                  BMCSettingRef is a reference to a BMCSettings object that specifies
+                  the BMC configuration for this BMC.
+                properties:
+                  name:
+                    default: ""
+                    description: |-
+                      Name of the referent.
+                      This field is effectively required, but due to backwards compatibility is
+                      allowed to be empty. Instances of this type with an empty value here are
+                      almost certainly wrong.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
+              bmcUUID:
+                description: |-
+                  bmcUUID is the unique identifier for the BMC as defined in REDFISH API.
+                  This field is optional and can be omitted, controller will choose the first avaialbe Manager
+                type: string
               consoleProtocol:
                 description: |-
                   ConsoleProtocol specifies the protocol to be used for console access to the BMC.
