--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - bases/metal.ironcore.dev_servermaintenances.yaml
 - bases/metal.ironcore.dev_biossettings.yaml
 - bases/metal.ironcore.dev_biosversions.yaml
+- bases/metal.ironcore.dev_bmcsettings.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
