--- a/config/crd/bases/metal.ironcore.dev_bmcversions.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcversions.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.1
+    controller-gen.kubebuilder.io/version: v0.18.0
   name: bmcversions.metal.ironcore.dev
 spec:
   group: metal.ironcore.dev
@@ -119,8 +119,8 @@ spec:
                 description: ServerMaintenancePolicy is maintenance policy to be enforced
                   on the server managed by referred BMC.
                 type: string
-              serverMaintenanceRefList:
-                description: ServerMaintenanceRefList are references to a ServerMaintenance
+              serverMaintenanceRefs:
+                description: ServerMaintenanceRefs are references to a ServerMaintenance
                   objects that Controller has requested for the each of the related
                   server.
                 items:
@@ -169,8 +169,6 @@ spec:
                           type: string
                       type: object
                       x-kubernetes-map-type: atomic
-                    serverName:
-                      type: string
                   type: object
                 type: array
               updatePolicy:
