--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -32,6 +32,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings
+  - biossettingssets
   - biosversions
   - bmcs
   - bmcsecrets
@@ -54,6 +55,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/finalizers
+  - biossettingssets/finalizers
   - biosversions/finalizers
   - bmcs/finalizers
   - bmcsecrets/finalizers
@@ -69,6 +71,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/status
+  - biossettingssets/status
   - biosversions/status
   - bmcs/status
   - bmcsecrets/status
