Fix review comments

--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -27,7 +27,7 @@ spec:
     - jsonPath: .status.state
       name: State
       type: string
-    - jsonPath: .status.AppliedStateTimeStamp
+    - jsonPath: .status.appliedTimeStamp
       name: AppliedOn
       type: date
     - jsonPath: .metadata.creationTimestamp
