inline common fields

--- a/config/samples/metal_v1alpha1_biosversionset.yaml
+++ b/config/samples/metal_v1alpha1_biosversionset.yaml
@@ -6,4 +6,13 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: biosversionset-sample
 spec:
-  # TODO(user): Add fields here
+  biosVersionTemplate:
+    version: "U59 v2.34 (10/04/2024)"
+    image:
+      URI: "https://foo-2.34_10_04_2024.signed.flash"
+      transferProtocol: "HTTPS"
+    updatePolicy: Normal
+  ServerSelector:
+    matchLabels: 
+      manufacturer: "dell"
+  serverMaintenancePolicy: OwnerApproval
